# azure-networking-management

./: Dockerfile  README.md  pyproject.toml  requirements.txt
modules/: azure_nsg_module.py  azure_route_table_module.py  azure_scale_set_module.py  azure_subnet_module.py  azure_vm_module.py  azure_vnet_module.py  azure_vng_module.py  main.py
tests/: test_azure_nsg_module.py  test_azure_route_table_module.py  test_azure_scale_set_module.py  test_azure_subnet_module.py  test_azure_vm_module.py  test_azure_vnet_module.py  test_azure_vng_module.py  test_main.py
